# node-llm-native

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  LICENSE  README.md  binding.gyp  example.js  index.js  package-lock.json  package.json
.github/workflows/: build.yml  release.yml  test.yml
addon/: native.cpp
cpp-llm-native/: CMakeLists.txt
cpp-llm-native/include/llm-native/: model.h
cpp-llm-native/src/: model.cpp
example/: example.js
model/: model.cpp  model.h
scripts/: build-backend.js  build-cpp-llm-native.js  ensure-backend.js  install.js  prerequisites.js
src/: model.cpp  native.cpp
test/: smoke.js
